# volpiano-display-utilities

./: .gitignore  LICENSE  OldCantus Comparison of Syllabification.xlsx  README.md  align_text_mel.py  alignment_test_cases.html  alignment_test_cases.json  cantus_text_syllabification.py  latin_syllabification.py  latin_word_syllabification.py  pyproject.toml  syllabification_comparison.csv  syllabification_test.py  syllabify.py  syllabized_full_texts.py  tests.py  text_volpiano_alignment.py  visualize_tests.py
.github/workflows/: test_module.yml
src/volpiano_display_utilities/: cantus_text_syllabification.py
tests/: alignment_test_cases.html  alignment_test_cases.json  tests.py  visualize_tests.py  word_syllabification_tests.csv
tests/word_syllabification_tests/: kanienkeha.csv
volpiano_display_utilities/: cantus_text_syllabification.py  kanienkeha_word_syllabification.py  latin_word_syllabification.py  syllabified_section.py  text_volpiano_alignment.py  volpiano_syllabification.py
