[tool.poetry]
name = "volpiano-display-utilities"
version = "1.0.0"
description = "Provides a set of tools for the syllabification of latin chant texts and the alignment of chant texts with Volpiano-encoded melodies according to the conventionss of the Cantus Database."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
black = "^23.9.1"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
